package org.zoo.vista;


/**
 * Interfaz, aquel que la implemente cuenta con un HoverState.
 */
public interface HoverVisuals {

    /**
     * Cambia el hoverState del elemento que implementa la interfaz.
     * @param hoverState El hoverState al que debe cambiar.
     */
    void setHoverState(boolean hoverState);
}
