package org.zoo.vista;

public interface Visitable {
    public void accept(Visitor v);
}
